@@ -1,3 +1,7 @@
+2009-02-21  Badlop  <badlop@process-one.net>
+
+	* src/ejabberd_auth.erl: Password is undefined when using digest
+
 2009-02-20 Pablo Polvorin <pablo.polvorin@process-one.net>
 
 	* src/mod_offline_odbc.erl, src/mod_privacy_odbc.erl, 
